--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -14,7 +14,7 @@
                         <li><a href="javascript:void()">My Balance</a></li>
                         <li><a href="javascript:void()">Inbox</a></li>
                         <li><a routerLinkActive="active" routerLink="/accountSettings">Account Setting</a></li>
-                        <li><a routerLink="/login">Logout</a></li>
+                        <li><a (click)="us.logout()" class="pointer"><i class="fa fa-power-off" aria-hidden="true"></i> Logout</a></li>
                     </ul>
                 </li>
                 <li class="nav-devider"></li>
