--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -29,7 +29,7 @@
         <div class="card">
             <div class="card-body" align="center">
                 <h4 class="card-title">Fotografia de usuario</h4>
-                <h6 class="card-subtitle">Nombre usuario</h6>
+                <h6 class="card-subtitle">Imagen de perfil</h6>
                 <img *ngIf="!imagenTemp" [src]="usuario.img | imagen" class="w150">
                 <img *ngIf="imagenTemp" [src]="imagenTemp" class="w150">
                 <br>
