--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,24 @@
 .w150 {
     width: 150px;
 }
+
+.w70 {
+    width: 70px;
+}
+
+.img-50 {
+    width: 50px;
+}
+
+.oculto {
+    display: none;
+}
+
+.fondo-negro {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+}
