Mantenedor de medicos listo

--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -26,7 +26,7 @@
             <div class="card-body">
 
                 <h3 class='card-title'>Usuarios resgistrados ( <small>{{totalRegistros}}</small> )</h3>
-                <table class='table table-condensed'>
+                <table class='table table-condensed table-hover'>
                     <thead>
                         <tr>
                             <th>Imagen</th>
